Add fonts for @font-face

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <p><html>
  <head>
  <link rel="stylesheet" href="book.css" />
+ <link rel="stylesheet" href="//fonts.passcod.net/@" />
  <meta charset="UTF-8" />
  <title>Le Bandit</title>
  <meta rel="author" content="Félix Saparelli" />
@@ -49,13 +50,13 @@
 <p>Je ferme les yeux. Jade a raison, bien sùr, mais ça ne change rien au problème. Sali et Finn sont trop fatiguées pour bouger, et le groupe s&#8217;est probablement déjà arrèté. C&#8217;est l&#8217;hiver, mais pourvu que ce ne soit pas trop couvert, le soleil devrait aider. Il y a une épaisseur de neige à courte distance de la route qui pourrait être utilisée pour construire un abri isolant, et, quoique bas, ce serait leur meilleur chance. Malheureusement, les règles du parcours ne permettant aucun mouvement durant le jour, ils seraient coincés, à quelques pas de l&#8217;arrivée, sans pain ni eau, à attendre l&#8217;obscurité. Je ne souhaiterai telle agonie à personne. Je soupire, ouvre les yeux, et souri un peu : Jade, me connaissant apparament plus que je ne me connais moi-même, a déjà démarré et fait les préparatifs pour y aller. Elle me tent un chocolat chaud.</p>
 
 <p>— On y va ?<br/>
-— On y va. Crayonne-nous pour une session en été d&#8217;accord ?<br/>
+— On y va. Crayonne-nous pour une session en été, d&#8217;accord ?<br/>
 — Ha ! On verra. Tu me doit toujours quelques faveurs, et je ne suis pas le crédit suisse !<br/>
 — OK, ok. Je t&#8217;attraperais des friandises.<br/>
 — Et ?<br/>
 — Et j&#8217;y travaille. Je n&#8217;ai pas oublié. </p>
 
-<p>Elle me fixe pendant un moment, puis embraye et met la radio. Un air de très mauvais jazz empli la cabine, me faisant froncer involontairement, ce qui a l&#8217;air de l&#8217;enchanter, car elle appuie sur l&#8217;accélérateur d&#8217;un <em>swing</em> joyeux.</p>
+<p>Elle me fixe pendant un moment, puis embraye et met la radio. Un air de très mauvais jazz empli la cabine, me faisant froncer involontairement, ce qui a l&#8217;air de l&#8217;enchanter.</p>
 
 <p>&#8230;</p>
 
